@@ -50,11 +50,27 @@ class UnpairedToolCallsRemoverTest {
         final var runId = "r2";
         final var reqId = "req-p";
         final var respId = "resp-p";
-        final var messages = List.of(new ToolCall(sessionId, runId, reqId, null, "tcX", "tool", "{}"),
-                new ToolCallResponse(sessionId, runId, respId, null, "tcX", "tool", null, "r", LocalDateTime.now()));
+        final var messages = List.of(new ToolCall(sessionId,
+                                                  runId,
+                                                  reqId,
+                                                  null,
+                                                  "tcX",
+                                                  "tool",
+                                                  "{}"),
+                                     new ToolCallResponse(sessionId,
+                                                          runId,
+                                                          respId,
+                                                          null,
+                                                          "tcX",
+                                                          "tool",
+                                                          null,
+                                                          "r",
+                                                          LocalDateTime.now()));
         final var modifiable = new ArrayList<AgentMessage>(messages);
         final var result = remover.select(sessionId, modifiable);
-        final var remainingIds = result.stream().map(AgentMessage::getMessageId).collect(Collectors.toSet());
+        final var remainingIds = result.stream()
+                .map(AgentMessage::getMessageId)
+                .collect(Collectors.toSet());
         assertTrue(remainingIds.contains(reqId));
         assertTrue(remainingIds.contains(respId));
     }
@@ -68,10 +84,24 @@ class UnpairedToolCallsRemoverTest {
         final var secondReqId = "second-req";
         final var tcId = "tcRepeat";
         final var messages = new ArrayList<AgentMessage>();
-        messages.add(new ToolCall(sessionId, runId, firstReqId, null, tcId, "tool", "{}"));
-        messages.add(new ToolCall(sessionId, runId, secondReqId, null, tcId, "tool", "{}"));
+        messages.add(new ToolCall(sessionId,
+                                  runId,
+                                  firstReqId,
+                                  null,
+                                  tcId,
+                                  "tool",
+                                  "{}"));
+        messages.add(new ToolCall(sessionId,
+                                  runId,
+                                  secondReqId,
+                                  null,
+                                  tcId,
+                                  "tool",
+                                  "{}"));
         final var result = remover.select(sessionId, messages);
-        final var remainingIds = result.stream().map(AgentMessage::getMessageId).collect(Collectors.toSet());
+        final var remainingIds = result.stream()
+                .map(AgentMessage::getMessageId)
+                .collect(Collectors.toSet());
         assertFalse(remainingIds.contains(firstReqId));
         assertTrue(remainingIds.contains(secondReqId));
     }
@@ -86,23 +116,60 @@ class UnpairedToolCallsRemoverTest {
         final var pairedReqId = "paired-req-msg";
         final var pairedRespId = "paired-resp-msg";
         final var messages = new ArrayList<AgentMessage>();
-        messages.add(new UserPrompt(sessionId, runId, "u", LocalDateTime.now()));
-        messages.add(new ToolCall(sessionId, runId, reqOnlyId, null, "tcA", "tool", "{}"));
-        messages.add(new ToolCallResponse(sessionId, runId, respOnlyId, null, "tcB", "tool", null, "r", LocalDateTime
-                .now()));
-        messages.add(new ToolCall(sessionId, runId, pairedReqId, null, "tcC", "tool", "{}"));
-        messages.add(new ToolCallResponse(sessionId, runId, pairedRespId, null, "tcC", "tool", null, "r", LocalDateTime
-                .now()));
+        messages.add(new UserPrompt(sessionId,
+                                    runId,
+                                    "u",
+                                    LocalDateTime.now()));
+        messages.add(new ToolCall(sessionId,
+                                  runId,
+                                  reqOnlyId,
+                                  null,
+                                  "tcA",
+                                  "tool",
+                                  "{}"));
+        messages.add(new ToolCallResponse(sessionId,
+                                          runId,
+                                          respOnlyId,
+                                          null,
+                                          "tcB",
+                                          "tool",
+                                          null,
+                                          "r",
+                                          LocalDateTime.now()));
+        messages.add(new ToolCall(sessionId,
+                                  runId,
+                                  pairedReqId,
+                                  null,
+                                  "tcC",
+                                  "tool",
+                                  "{}"));
+        messages.add(new ToolCallResponse(sessionId,
+                                          runId,
+                                          pairedRespId,
+                                          null,
+                                          "tcC",
+                                          "tool",
+                                          null,
+                                          "r",
+                                          LocalDateTime.now()));
         messages.add(new Text(sessionId, runId, "txt"));
         final var msgIdsByType = messages.stream()
-                .collect(Collectors.groupingBy(AgentMessage::getMessageType, Collectors.mapping(
-                        AgentMessage::getMessageId, Collectors.toList())));
+                .collect(Collectors.groupingBy(AgentMessage::getMessageType,
+                                               Collectors.mapping(
+                                                                  AgentMessage::getMessageId,
+                                                                  Collectors
+                                                                          .toList())));
         final var result = remover.select(sessionId, messages);
-        final var remainingIds = result.stream().map(AgentMessage::getMessageId).collect(Collectors.toSet());
+        final var remainingIds = result.stream()
+                .map(AgentMessage::getMessageId)
+                .collect(Collectors.toSet());
         assertFalse(remainingIds.contains(reqOnlyId));
         assertFalse(remainingIds.contains(respOnlyId));
-        assertTrue(remainingIds.contains(pairedReqId) || remainingIds.contains(pairedRespId),
-                "remainingIds: " + remainingIds);
-        assertTrue(remainingIds.contains(msgIdsByType.get(AgentMessageType.TEXT_RESPONSE_MESSAGE).get(0)));
+        assertTrue(remainingIds.contains(pairedReqId) || remainingIds.contains(
+                                                                               pairedRespId),
+                   "remainingIds: " + remainingIds);
+        assertTrue(remainingIds.contains(msgIdsByType.get(
+                                                          AgentMessageType.TEXT_RESPONSE_MESSAGE)
+                .get(0)));
     }
 }
